# SvgTheme

./: .gitignore  README.md  flake.nix  meson.build
src/: main.py
svgtheme/: main.py  meson.build  svg.py  svgtheme.in
